# obsei

./: .condarc  .gitignore  .pre-commit-config.yaml  .pyup.yml  ATTRIBUTION.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  _config.yml  _t1.py  azure-pipelines.yml  database.py  docker-compose.yml  index.html  pandas_scrapper.py  poc_docsplit.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  restart_rq_worker.sh  setup.cfg  setup.py  test_job.py  test_qr.py
.github/: release-drafter.yml  release_drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: SocialTracker.yml  build.yml  ci.yml  codeql.yml  conda_publish.yml  daily-get.yml  publish_conda.yml  pypi.yml  pypi_publish.yml  release.yml  release_draft.yml  sdk_docker_publish.yml  ui_docker_publish.yml
.streamlit/: config.toml  secrets.toml
_includes/: head-custom-google-analytics.html
api/: .env.example
api/src/: main.py  setting.py
binder/: requirements.txt
conda/: conda_build_config.yaml  environment.yml  gpu-environment.yml  meta.yaml
config/: rest.yaml  sdk.yaml  twitter.yaml
core/: __init__.py  configuration.py  process_workflow.py  processor.py
core/analyzer/: base_analyzer.py  classification_analyzer.py  dummy_analyzer.py  ner_analyzer.py  pii_analyzer.py  sentiment_analyzer.py  translation_analyzer.py
core/misc/: tiktok_comments_scrapper.py  utils.py
core/postprocessor/: base_postprocessor.py  inference_aggregator.py  inference_aggregator_function.py
core/preprocessor/: base_preprocessor.py  text_cleaner.py  text_cleaning_function.py  text_splitter.py  text_tokenizer.py
core/sink/: base_sink.py  dailyget_sink.py  elasticsearch_sink.py  http_sink.py  jira_sink.py  logger_sink.py  pandas_sink.py  slack_sink.py  zendesk_sink.py
core/source/: appstore_scrapper.py  base_source.py  email_source.py  facebook_scrapper.py  google_maps_reviews.py  google_news_source.py  instagram_scrapper.py  pandas_source.py  playstore_reviews.py  playstore_scrapper.py  reddit_scrapper.py  reddit_source.py  tiktok_scrapper.py  twitter_source.py  website_crawler_source.py  youtube_scrapper.py
core/workflow/: store.py  workflow.py
crontabs/: cron_tab.py  youtube.py
example/: Obsei_playstore_classification_logger_example.ipynb  app_store_scrapper_example.py  daily_get.py  daily_get_example.py  elasticsearch_example.py  email_source_example.py  facebook_example.py  google_news_example.py  google_place_reviews_example.py  jira.py  jira_example.py  maps_review_scrapper_example.py  pandas_scrapper.py  pandas_sink_example.py  pandas_source_example.py  pii_analyzer_example.py  play_store_reviews_example.py  playstore_scrapper_example.py  playstore_scrapper_translator_example.py  reddit_example.py  reddit_scrapper_example.py  sdk.yaml  sdk_config_example.py  slack_example.py  topic_modeling_example.py  twitter_source_example.py  web_crawler_example.py  with_sdk_config_file.py  with_state_example.py  youtube_scrapper_example.py
libs/: cookies.txt  example.py
libs/facebook/: cookies.txt  example.py  page_iterators.py  requirements.txt
libs/facebook_scraper/: example.py
libs/instagram/: instagram-page-scraper.py
libs/tiktok/: process_tiktok.py  search_tiktok.py
obsei/: __init__.py  _version.py  configuration.py  payload.py  process_workflow.py  processor.py  text_analyzer.py  utils.py
obsei/analyzer/: __init__.py  auto_encoder.py  base_analyzer.py  classification_analyzer.py  dummy_analyzer.py  ner_analyzer.py  pii_analyzer.py  sentiment_analyzer.py  text_analyzer.py  topic_analyzer.py  topic_analyzer_utils.py  translation_analyzer.py
obsei/misc/: appstore_review_reader.py  gpu_util.py  tiktok_comments_scrapper.py  utils.py  web_search.py  youtube_reviews_scrapper.py
obsei/postprocessor/: __init__.py  base_postprocessor.py  inference_aggregator.py  inference_aggregator_function.py  interface_aggregator.py
obsei/preprocessor/: __init__.py  base_preprocessor.py  base_text_cleaner.py  text_cleaner.py  text_cleaning_function.py  text_splitter.py  text_splitter_v2.py  text_tokenizer.py
obsei/sink/: __init__.py  base_sink.py  base_sink_config.py  dailyget_sink.py  elasticsearch_sink.py  http_sink.py  http_sink_config.py  jira_sink.py  logger_sink.py  pandas_sink.py  sink_utils.py  slack_sink.py  zendesk_sink.py
obsei/source/: __init__.py  appstore_scrapper.py  base_source.py  base_source_config.py  email_source.py  facebook_scrapper.py  facebook_source.py  google_maps_reviews.py  google_news_source.py  google_place_reviews.py  instagram_scrapper.py  pandas.py  pandas_source.py  playstore_reviews.py  playstore_scrapper.py  reddit_scrapper.py  reddit_source.py  source_utils.py  tiktok_scrapper.py  twitter_source.py  (+3 more)
pytok/: __init__.py  captcha_solver.py  exceptions.py  helpers.py  tiktok.py  utils.py
queues/: social_listening.py
rest_api/: api_request_response.py  application.py  global_utils.py  rate_limiter.py  task_config_store.py
sample-ui/: Dockerfile  Home.py  README.md  config.yaml  cron_tab.py  my_script.py  requirements.txt  ui.py  utils.py
socials/: crawler.py  facebook.py  google_news.py  insta_facebook.py  play_app_store.py  reddit_rss.py  tiktok.py  youtube.py
socialtracker/: classification.py  processor.py  text_analyzer.py  tweeter_lookup.py  twitter_lookup.py
test/: conftest.py  test_analyzer.py  test_google_place_reviews.py  test_imports.py  test_inference_aggregator.py  test_pii_analyzer.py  test_sentiment.py  test_text_analyzer.py  test_text_cleaner.py  test_text_splitter.py  test_translator.py
tutorials/: 01_PlayStore_Classification_Logger.ipynb  02_PlayStore_PreProc_Classification_Pandas.ipynb  03_AppStore_PreProc_Classification_Pandas.ipynb  04_GoogleNews_Cleaner_Splitter_Classification_Aggregator.ipynb  Example3_PlayStore_PreProcessing_Classification_Pandas.ipynb
ui/: MANIFEST.in  pyproject.toml
unrelated/: twitter_openapi.json
views/: 1_📈_ Dashboard.py  Home.py  config.yaml  utils.py
(+78 files in other folders)
