[options]
find-links=https://download.pytorch.org/whl/torch_stable.html

[options.extras_require]

facebook-api=
    python-facebook-api==0.14.1
    dataclasses-json==0.5.7 # via python-facebook-api
    marshmallow==3.17.0 # via dataclasses-json, marshmallow-enum
    marshmallow-enum==1.5.1 # via dataclasses-json
    typing-inspect==0.7.1 # via dataclasses-json

gnews=
    bs4==0.0.1 # via gnews
    dnspython==1.16.0 # via gnews
    feedparser==6.0.10 # via app-store-reviews-reader, gnews, reddit-rss-reader
    gnews==0.2.7 # via -r requirements.in
    pymongo==3.12.3 # via gnews
    python-dotenv==0.19.2 # via gnews

google-api=
    google-api-python-client==2.52.0 # via -r requirements.in
    google-api-core==2.8.2 # via google-api-python-client
    googleapis-common-protos==1.56.3 # via google-api-core
    google-auth-httplib2==0.1.0 # via google-api-python-client
    google-auth==2.9.0 # via google-api-core, google-api-python-client, google-auth-httplib2
    httplib2==0.20.4 # google-api-python-client, google-auth-httplib2
    pyasn1-modules==0.2.8 # via google-auth
    rsa==4.8 # via google-auth
    uritemplate==4.1.1 # via google-api-python-client
    cachetools==5.2.0 # via google-auth

pandas=
    pandas>=1.3.5 # Pandas dropped support for 3.7 hence keeping it less strict
    numpy>=1.21.4 # via panda, spac, thin, transformers

torch=
    torch==1.12.0 ; sys_platform != 'win32' and sys_platform != 'cygwin'

presidio=
    presidio-analyzer==2.2.28
    presidio-anonymizer==2.2.28
    phonenumbers==8.12.51 # via presidio-analyzer
    pycryptodome==3.15.0 # via presidio-anonymizer
    pyyaml==6.0 # via huggingface-hub, presidio-analyzer, searchtweets-v2, transformers
    spacy==3.4.0 # via presidio-analyzer
    spacy-legacy==3.0.9 # via spacy
    spacy-loggers==1.0.2 # via spacy
    srsly==2.4.3 # via spacy, thinc
    thinc==8.1.0 # via spacy
    tldextract==3.3.1 # via presidio-analyzer
    requests-file==1.5.1 # via tldextract
    regex==2022.3.2 # via dateparser, nltk, presidio-analyzer, transformers
    filelock==3.7.1 # via huggingface-hub, tldextract, transformers
    packaging==21.3 # via huggingface-hub, marshmallow, spacy, transformers
    tqdm==4.64.0 # via huggingface-hub, nltk, spacy, transformers
    pathy==0.6.2 # via spacy
    smart-open==5.2.1 # via pathy
    typer==0.4.2 # via pathy, spacy
    wasabi==0.9.1 # via spacy, spacy-loggers, thinc
    catalogue==2.0.7 # via spacy, srsly, thinc
    blis==0.7.8 # via thinc
    preshed==3.0.6 # via spacy, thinc
    cymem==2.0.6 # via preshed, spacy, thinc
    murmurhash==1.0.7 # via preshed, spacy, thinc
    jinja2==3.1.2 # via spacy
    langcodes==3.3.0 # via spacy
    markupsafe==2.1.1 # via jinja2
    idna==3.3 # via requests, tldextract
    protobuf==4.21.2 # via google-api-core, googleapis-common-protos

transformers =
    transformers==4.20.1
    filelock==3.7.1 # via huggingface-hub, tldextract, transformers
    huggingface-hub==0.8.1 # via transformers
    numpy>=1.21.4 # via panda, spac, thin, transformers
    packaging==21.3 # via huggingface-hub, marshmallow, spacy, transformers
    tokenizers==0.12.1 # via transformers
    tqdm==4.64.0 # via huggingface-hub, nltk, spacy, transformers
